<resources>
    <string name="app_name">Multisala</string>
    <string name="Film_programmazione">Film in programmazione</string>
    <string name="Film">Film</string>
    <string name="Prenotazioni">Prenotazioni</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="Genere_film">Genere: </string>
    <string name="Durata_film">Durata: </string>
    <string name="Prenota">Prenota</string>
    <string name="stato_prenotazione">Stato: Prenotazione Confermata</string>
    <string name="evento">Evento del:</string>
    <string name="posti">Posti:</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="nonseiregistrato">Non sei registrato?</string>
    <string name="registrati">Registrati</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="email">Email</string>
    <string name="confPass">Conferma password</string>
    <string name="errore_email_non_valida">Email non valida</string>
    <string name="password_differenti">Le due password non corrispondo!</string>
    <string name="errore_campi_incompleti">Completare tutti i campi</string>
    <string name="errore_database">Impossibile connettersi al database</string>
    <string name="errore_generico">Errore generico del database</string>
    <string name="errore_server">Errore di connessione al server</string>
    <string name="errore_posti">Posti liberi non sufficienti</string>
    <string name="errore_password">Password errata</string>
    <string name="errore_utente_inesistente">Utente inesistente</string>
    <string name="errore_utente_giaesistente">Utente già esistente</string>
    <string name="userAgent">User-Agent</string>
    <string name="userAgentAndroid">ClientAndroid</string>
    <string name="dettagli_prenotazione">Dettagli Prenotazione</string>
    <string name="codice_string">Codice:</string>
    <string name="film">Film:</string>
    <string name="data_ora_evento">Data e Ora:</string>
    <string name="prenotazioni_effettuate">Prenotazioni effettuate</string>
    <string name="posti_prenotati">Posti prenotati:</string>
    <string name="annullare_prenotazione">Annullare Prenotazione?</string>
    <string name="annulla_prenotazione">Annulla Prenotazione</string>
    <string name="chiudi">Chiudi</string>
    <string name="Orario">Orari</string>
    <string name="Nessuna_programmazione_per_questo_film">Momentaneamente non è presente nessuna programmazione per questo film</string>
    <string name="no_admin">noadmin</string>
    <string name="admin">admin</string>
    <string name="login_successo">Login Effettuato!</string>
    <string name="accesso_come_admin">Connesso come admin</string>
    <string name="non_autorizzato">Accesso non autorizzato</string>
    <string name="errore_sala_inesistente">Sala inesistente</string>
    <string name="errore_programmazione_inesistente">Programmazione inesistente</string>
    <string name="nessuna_prenotazione">Nessuna prenotazione effettuata</string>
    <string name="prenotazione_annullata">Prenotazione annullata!</string>
    <string name="devi_effettuare_login">Per prenotarti devi effettuare il login!</string>
    <string name="prenotazioni_effettua_login">Per visualizzare le prenotazioni devi effettuare il login!</string>
    <string name="nessuna_prog_pre_il_film">Momentaneamente non è presente nessuna programmazione per questo film</string>
    <string name="data">Data:</string>
    <string name="ora">Ora:</string>
    <string name="sala">Sala:</string>
    <string name="quantiPost">Quanti posti vuoi prenotare?</string>
    <string name="settore">Settore:</string>
    <string name="platea">Platea</string>
    <string name="procedi">Procedi</string>
    <string name="registrazione">Registrazione</string>
    <string name="prenotazione">Prenotazione</string>
    <string name="riepilogo_prezzi">Riepilogo prezzi</string>
    <string name="Biglietto">Biglietto:</string>
    <string name="costo">5€</string>
    <string name="costo2">1€</string>
    <string name="euro">€</string>
    <string name="diritto_pren">Diritto di prenotazione:</string>
    <string name="totale">Totale:</string>
    <string name="inserire_posti_da_prenotare">Inserire il numero dei posti da prenotare</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="conferma">Conferma prenotazione</string>
    <string name="conf_pren_di">Confermi la prenotazione di</string>
    <string name="n_posti">posti per</string>
    <string name="del">del</string>
    <string name="inserisci_numero_valido">Inserisci un numero valido</string>
    <string name="loginString">Effettua login</string>
    <string name="annulla">Annulla</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="appuntamento">Appuntamento al Cinema!</string>


</resources>
