<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:background="@color/colorPrimary">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/codice_string"
        android:id="@+id/textView29"
        android:textColor="#ffffff"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/film"
        android:id="@+id/textView30"
        android:textColor="#ffffff"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/data_ora_evento"
        android:id="@+id/textView31"
        android:textColor="#ffffff"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/posti_prenotati"
        android:id="@+id/textView32"
        android:textColor="#ffffff"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stato_prenotazione"
        android:id="@+id/textView33"
        android:textColor="#ffffff"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/annulla_prenotazione"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chiudi"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp" />
</LinearLayout>