<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryMid">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView34"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:textStyle="bold|italic" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/data"
                android:id="@+id/textView35"
                android:layout_marginRight="120dp"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="27/12/2017"
                android:id="@+id/textView36"
                android:layout_column="1"
                android:gravity="center_horizontal"
                android:textColor="#ffffff" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ora"
                android:id="@+id/textView37"
                android:layout_marginRight="60dp"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="20:00"
                android:id="@+id/textView38"
                android:gravity="center_horizontal"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sala"
                android:id="@+id/textView39"
                android:layout_marginRight="60dp"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Sala01"
                android:id="@+id/textView40"
                android:gravity="center_horizontal"
                android:textColor="#ffffff" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryMid"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/quantiPost"
            android:id="@+id/textView41"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:layout_margin="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/settore"
                android:id="@+id/textView42"
                android:textColor="#ffffff"
                android:layout_marginRight="120dp" />

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/platea"
                android:id="@+id/textView43"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/posti"
                android:id="@+id/textView44"
                android:textColor="#ffffff" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="2"
                android:id="@+id/editText9"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal" />

        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/procedi"
        android:id="@+id/button7"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="procedi" />

</LinearLayout>
