<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/linearLayout"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Film"
            android:id="@+id/textView"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="30dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Prenotazioni"
            android:id="@+id/textView2"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="25dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Login"
            android:id="@+id/textView3"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/linearLayout2"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/imageButton"
            android:background="@drawable/film"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:onClick="onImageButtonClicked" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageButton2"
            android:background="@drawable/prenotazioni"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:onClick="onImageButtonClicked" />

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/imageButton3"
            android:background="@drawable/login"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:onClick="onImageButtonClicked" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout2"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user"
            android:id="@+id/textView17"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textStyle="bold|italic"
            android:textSize="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pass"
            android:id="@+id/textView18"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold|italic"
            android:textSize="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:onClick="login" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nonseiregistrato"
            android:id="@+id/textView19"
            android:layout_gravity="center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrati"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:onClick="registrati" />
    </LinearLayout>
</RelativeLayout>