<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/linearLayout"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Film"
            android:id="@+id/textView"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="30dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Prenotazioni"
            android:id="@+id/textView2"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="25dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Login"
            android:id="@+id/textView3"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/linearLayout2"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/imageButton"
            android:background="@drawable/film"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:onClick="onImageButtonClicked" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageButton2"
            android:background="@drawable/prenotazioni"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:onClick="onImageButtonClicked" />

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:id="@+id/imageButton3"
            android:background="@drawable/login"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:onClick="onImageButtonClicked" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout2"
        android:paddingTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/benvenuto"
            android:id="@+id/textView21"
            android:layout_gravity="center_horizontal"
            android:textSize="40dp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView22"
            android:layout_gravity="center_horizontal"
            android:textSize="40dp"
            android:textStyle="bold|italic" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:onClick="logout"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</RelativeLayout>